examples/test/testpolicy18332.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18332
  namespace: namespace230
spec:
  podSelector:
    matchLabels:
      key48: value26
      key21: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value35
          key31: value44
      podSelector:
        matchLabels:
          key24: value29
